# peaches

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  STRATEGIES.md  create-worktree.sh  docker-compose.yml  manual-deploy.sh  merge-worktree.sh  pyproject.toml  pyrightconfig.json
.github/workflows/: deploy.yml
.opencode/: opencode.json  package-lock.json
.opencode/commands/: 52w-high.md  abandon-worktree.md  capture-mistakes.md  commit.md  docs.md  execute-plan.md  init-worktree.md  merge-worktree.md
.opencode/plans/: DI_DESIGN.md
.opencode/plugins/: discord-notification.js
.opencode/skills/cli-analysis/: SKILL.md
.opencode/skills/yagni-enforcement/: SKILL.md
app/: __init__.py  bot.py  config.py  container.py  cooltrader.py  database.py  gateway.py  gateway_scanner.py  health.py  import_api.py  importer.py  main.py  scheduler.py
app/analysis/: __init__.py  announcement_scraper.py  backtest_engine.py  data_loader.py  metrics.py  results.py  stock_data.py  types.py
app/analysis/scanners/: __init__.py  gap_scanner.py  momentum_scanner.py
app/analysis/strategies/: donchian_breakout.py
app/api/: __init__.py
app/api/v1/: __init__.py  router.py  scanner.py
app/api/v1/announcement_gap/: __init__.py  router.py
app/api/v1/health/: __init__.py  router.py
app/api/v1/historical_data/: __init__.py  router.py
app/api/v1/ibkr_scanner/: __init__.py  router.py
app/api/v1/scanners/: __init__.py  router.py
app/cli/: analysis_cli.py
app/events/: __init__.py  bus.py  events.py
app/events/handlers/: __init__.py  announcement_gap_handler.py  discord_handler.py  ibkr_scanner_handler.py  import_handler.py  strategy_handler.py
app/models/: __init__.py  announcement.py
app/scanner/: __init__.py  announcement_gap_scanner.py  filters.py  gap_detector.py  opening_range.py  scanner.py
app/scanners/: __init__.py  asx_price_sensitive.py  base.py
app/scanners/asx/: __init__.py  announcements.py  price_sensitive.py
app/scanners/gap/: __init__.py  announcement_gap_scanner.py  filters.py  gap_detector.py  ibkr_gap_scanner.py  models.py  opening_range.py  scanner.py
app/scheduler/: __init__.py  import_scheduler.py  scanner_scheduler.py  scheduler_service.py
app/services/: __init__.py  announcement_gap_strategy_service.py  gateway_service.py  health_service.py  ibkr_scanner_service.py  notification_service.py  scanner_service.py  scheduler_service.py  strategy_service.py  strategy_trigger_service.py
app/strategies/: __init__.py  announcement_gap_strategy.py  example_strategy.py
config/: settings.yaml
docs/: GAP_STRAT.md  MISTAKES.md  MISTAKES_IMPLEMENTATION.md  SCANNERS.md  SERVICES.md  STRATEGIES.md
secrets/: tws_password.txt.example  vnc_password.txt.example
tests/: conftest.py  test_analysis_backtest_engine.py  test_analysis_gap_scanner.py  test_analysis_metrics.py  test_analysis_results.py  test_announcement_gap_handler.py  test_api_announcement_gap.py  test_bot.py  test_cooltrader.py  test_event_bus.py  test_event_integration.py  test_handlers.py  test_importer.py
tests/integration/: test_asx_announcements.py  test_asx_price_sensitive.py  test_ibind_oauth.py  test_ibkr_gap_scanner.py
