[project]
name = "vnpy-trading-bot"
version = "0.1.0"
description = "Production-ready headless trading bot for vn.py using Docker"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["trading", "vnpy", "algorithmic-trading", "quant", "docker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "vnpy>=4.3.0",
    "vnpy_ib>=9.81.1.6",
    "vnpy_ctastrategy>=1.3.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "PyYAML>=6.0.0",
    "ruamel.yaml>=0.18.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "structlog>=25.0.0",
    "tenacity>=9.0.0",
    "polars>=1.0.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",
    "ruff>=0.9.0",
    "mypy>=1.11.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "ARG",
    "SIM",
]
ignore = [
    "E501",
    "ARG001",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
check_untyped_defs = false
no_implicit_optional = false

[[tool.mypy.overrides]]
module = [
    "vnpy.*",
    "vnpy_ib",
    "vnpy_ib.*",
    "vnpy_ctastrategy",
    "vnpy_ctastrategy.*",
    "apscheduler.*",
    "fastapi",
    "fastapi.*",
    "pydantic",
    "pydantic.*",
    "pydantic_settings",
    "pydantic_settings.*",
    "loguru",
    "loguru.*",
    "uvicorn",
    "uvicorn.*",
    "tenacity",
    "tenacity.*",
    "httpx",
    "httpx.*",
    "ruamel.yaml",
    "ruamel.yaml.*",
    "polars",
    "polars.*",
]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
