[project]
name = "peaches-trading-bot"
version = "0.1.0"
description = "Production-ready headless trading bot for vn.py using Docker"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["trading", "vnpy", "algorithmic-trading", "quant", "docker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "vnpy>=4.3.0",
    "vnpy_sqlite>=1.0.0",
    "vnpy_ib>=9.81.1.6",
    "python-ibapi-stable>=10.30.1",
    "vnpy_ctastrategy>=1.3.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "PyYAML>=6.0.0",
    "ruamel.yaml>=0.18.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "structlog>=25.0.0",
    "tenacity>=9.0.0",
    "polars>=1.0.0",
    "apscheduler>=3.10.0",
    "typer>=0.15.0",
    "pyarrow>=23.0.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
peaches-analysis = "app.cli.analysis_cli:cli"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "ARG", "SIM"]
ignore = ["E501", "ARG001"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
check_untyped_defs = false
no_implicit_optional = false
ignore_errors = false
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "vnpy.*",
    "ibapi.*",
    "apscheduler.*",
    "fastapi.*",
    "pydantic.*",
    "pydantic_settings.*",
    "loguru.*",
    "uvicorn.*",
    "tenacity.*",
    "httpx.*",
    "ruamel.yaml.*",
    "polars.*",
    "bs4.*",
    "requests.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",
    "ruff>=0.9.0",
    "mypy>=1.11.0",
    "pyright>=1.1.408",
    "pre-commit>=4.0.0",
    "types-peewee>=3.19.0.20260109",
]
